<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditarTarefaActivity">

    <TextView
        android:id="@+id/txtTituloPagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/editar_tarefa"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTituloPagina"
        android:text="@string/titulo_da_tarefa"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignStart="@id/editTitulo" />

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitulo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTitulo"
        android:text="@string/descri_o_da_tarefa"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignStart="@id/editDescricao" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDescricao"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/txtDataHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDescricao"
        android:text="@string/data_e_hora_da_tarefa"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignStart="@id/editTitulo" />
    <CalendarView
        android:id="@+id/calendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDataHora"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendario"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnDeletar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/redDangerBack">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_lixeira"
            app:tint="@color/redDanger"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:clickable="false"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>